k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goodz-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: goodz-backend
  template:
    metadata:
      labels:
        app: goodz-backend
    spec:
      containers:
        - name: goodz-backend
          image: asia-southeast2-docker.pkg.dev/pro-icon-428103-v3/goodz-backend/goodz-backend:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
